fin/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    MINUSEQUAL
    COMMENTSLINE
    PLUSEQUAL
    NEWLINE
    COLON
    COMMENTDELIM

Grammar

Rule 0     S' -> start
Rule 1     start -> compilation_unit
Rule 2     compilation_unit -> class_declarations
Rule 3     compilation_unit -> using_directives class_declarations
Rule 4     using_directives -> using_directive
Rule 5     using_directives -> using_directives using_directive
Rule 6     using_directive -> USING identifier TERMINATOR
Rule 7     class_declarations -> class_declarations class_declaration
Rule 8     class_declarations -> class_declaration
Rule 9     class_declaration -> modifiers CLASS identifier class_body TERMINATOR
Rule 10    class_declaration -> CLASS identifier class_body TERMINATOR
Rule 11    class_declaration -> CLASS identifier class_body
Rule 12    class_declaration -> modifiers CLASS identifier class_body
Rule 13    class_body -> LBRACE class_member_declarations RBRACE
Rule 14    class_body -> LBRACE RBRACE
Rule 15    identifier -> IDENTIFIER
Rule 16    class_member_declarations -> class_member_declaration
Rule 17    class_member_declarations -> class_member_declarations class_member_declaration
Rule 18    class_member_declaration -> field_declaration
Rule 19    class_member_declaration -> method_declaration
Rule 20    class_member_declaration -> constructor_declaration
Rule 21    class_member_declaration -> destructor_declaration
Rule 22    field_declaration -> modifiers type variable_declarators TERMINATOR
Rule 23    field_declaration -> type variable_declarators TERMINATOR
Rule 24    type -> reference_type
Rule 25    type -> type_parameter
Rule 26    reference_type -> class_type
Rule 27    reference_type -> array_type
Rule 28    class_type -> proper_identifier
Rule 29    class_type -> OBJECT
Rule 30    proper_identifier -> prefix identifier
Rule 31    prefix -> identifier MEMBERACCESS
Rule 32    prefix -> prefix identifier MEMBERACCESS
Rule 33    array_type -> non_array_type LBRACKET RBRACKET
Rule 34    non_array_type -> type
Rule 35    type_parameter -> identifier
Rule 36    type_parameter -> predefined_type
Rule 37    variable_declarators -> variable_declarator
Rule 38    variable_declarators -> variable_declarators COMMA variable_declarator
Rule 39    variable_declarator -> identifier
Rule 40    variable_declarator -> identifier EQUALS variable_initializer
Rule 41    variable_initializer -> expression
Rule 42    variable_initializer_list -> variable_initializer
Rule 43    variable_initializer_list -> variable_initializer_list COMMA variable_initializer
Rule 44    method_declaration -> method_header method_body
Rule 45    method_header -> type member_name LPAREN fixed_parameters RPAREN
Rule 46    method_header -> modifiers type member_name LPAREN fixed_parameters RPAREN
Rule 47    method_header -> type member_name LPAREN RPAREN
Rule 48    method_header -> modifiers type member_name LPAREN RPAREN
Rule 49    method_header -> VOID member_name LPAREN fixed_parameters RPAREN
Rule 50    method_header -> modifiers VOID member_name LPAREN fixed_parameters RPAREN
Rule 51    method_header -> VOID member_name LPAREN RPAREN
Rule 52    method_header -> modifiers VOID member_name LPAREN RPAREN
Rule 53    modifiers -> modifier
Rule 54    modifiers -> modifiers modifier
Rule 55    modifier -> PUBLIC
Rule 56    modifier -> PRIVATE
Rule 57    member_name -> identifier
Rule 58    method_body -> block
Rule 59    method_body -> TERMINATOR
Rule 60    fixed_parameters -> fixed_parameter
Rule 61    fixed_parameters -> fixed_parameters COMMA fixed_parameter
Rule 62    fixed_parameter -> type identifier default_argument
Rule 63    fixed_parameter -> type identifier
Rule 64    default_argument -> EQUALS expression
Rule 65    constructor_declaration -> constructor_declarator constructor_body
Rule 66    constructor_declarator -> identifier LPAREN fixed_parameters RPAREN
Rule 67    constructor_declarator -> identifier LPAREN RPAREN
Rule 68    constructor_body -> block
Rule 69    constructor_body -> TERMINATOR
Rule 70    destructor_declaration -> TILDE identifier LPAREN RPAREN destructor_body
Rule 71    destructor_body -> block
Rule 72    destructor_body -> TERMINATOR
Rule 73    block -> LBRACE RBRACE
Rule 74    block -> LBRACE scope_marker statement_list RBRACE
Rule 75    scope_marker -> <empty>
Rule 76    statement_list -> statement
Rule 77    statement_list -> statement_list statement
Rule 78    statement -> local_variable_declaration TERMINATOR
Rule 79    statement -> embedded_statement
Rule 80    embedded_statement -> block
Rule 81    embedded_statement -> TERMINATOR
Rule 82    embedded_statement -> statement_expression TERMINATOR
Rule 83    embedded_statement -> if_statement
Rule 84    embedded_statement -> iteration_statement
Rule 85    embedded_statement -> print_statement
Rule 86    embedded_statement -> break_statement
Rule 87    embedded_statement -> return_statement
Rule 88    print_statement -> PRINT LPAREN expression RPAREN TERMINATOR
Rule 89    break_statement -> BREAK TERMINATOR
Rule 90    continue_statement -> CONTINUE TERMINATOR
Rule 91    return_statement -> RETURN TERMINATOR
Rule 92    return_statement -> RETURN expression TERMINATOR
Rule 93    literal -> INTCONST
Rule 94    literal -> STRCONST
Rule 95    literal -> CHARCONST
Rule 96    local_variable_declaration -> type local_variable_declarators
Rule 97    local_variable_declarators -> local_variable_declarator
Rule 98    local_variable_declarators -> local_variable_declarators COMMA local_variable_declarator
Rule 99    local_variable_declarator -> identifier
Rule 100   local_variable_declarator -> identifier EQUALS local_variable_initializer
Rule 101   local_variable_initializer -> expression
Rule 102   statement_expression -> object_creation_expression
Rule 103   statement_expression -> assignment
Rule 104   statement_expression -> invocation_expression
Rule 105   statement_expression -> post_increment_expression
Rule 106   statement_expression -> post_decrement_expression
Rule 107   invocation_expression -> primary_expression LPAREN argument_list RPAREN
Rule 108   invocation_expression -> primary_expression LPAREN RPAREN
Rule 109   invocation_expression -> identifier LPAREN RPAREN
Rule 110   invocation_expression -> identifier LPAREN argument_list RPAREN
Rule 111   invocation_expression -> proper_identifier LPAREN argument_list RPAREN
Rule 112   invocation_expression -> proper_identifier LPAREN RPAREN
Rule 113   if_statement -> if LPAREN expression RPAREN embedded_statement
Rule 114   if_statement -> if LPAREN expression RPAREN embedded_statement else embedded_statement
Rule 115   if -> IF
Rule 116   else -> ELSE
Rule 117   iteration_statement -> while LPAREN expression RPAREN embedded_statement
Rule 118   while -> WHILE
Rule 119   expression -> non_assignment_expression
Rule 120   expression -> assignment
Rule 121   assignment -> unary_expression assignment_operator expression
Rule 122   assignment -> identifier assignment_operator expression
Rule 123   assignment_operator -> EQUALS
Rule 124   unary_expression -> primary_expression
Rule 125   unary_expression -> PLUS unary_expression
Rule 126   unary_expression -> PLUS identifier
Rule 127   unary_expression -> MINUS unary_expression
Rule 128   unary_expression -> MINUS identifier
Rule 129   unary_expression -> LNOT unary_expression
Rule 130   unary_expression -> LNOT identifier
Rule 131   unary_expression -> TILDE unary_expression
Rule 132   unary_expression -> TILDE identifier
Rule 133   primary_expression -> primary_no_array_creation_expression
Rule 134   primary_expression -> array_creation_expression
Rule 135   primary_no_array_creation_expression -> literal
Rule 136   primary_no_array_creation_expression -> parenthesized_expression
Rule 137   primary_no_array_creation_expression -> member_access
Rule 138   primary_no_array_creation_expression -> element_access
Rule 139   primary_no_array_creation_expression -> post_increment_expression
Rule 140   primary_no_array_creation_expression -> invocation_expression
Rule 141   primary_no_array_creation_expression -> post_decrement_expression
Rule 142   primary_no_array_creation_expression -> object_creation_expression
Rule 143   primary_no_array_creation_expression -> typeof_expression
Rule 144   parenthesized_expression -> LPAREN expression RPAREN
Rule 145   member_access -> primary_expression MEMBERACCESS identifier
Rule 146   member_access -> iMEMAi
Rule 147   member_access -> predefined_type MEMBERACCESS identifier
Rule 148   predefined_type -> INT
Rule 149   predefined_type -> CHAR
Rule 150   element_access -> primary_no_array_creation_expression LBRACKET expression_list RBRACKET
Rule 151   element_access -> identifier LBRACKET expression_list RBRACKET
Rule 152   expression_list -> expression
Rule 153   expression_list -> expression_list COMMA expression
Rule 154   post_increment_expression -> primary_expression INCREMENT
Rule 155   post_increment_expression -> identifier INCREMENT
Rule 156   post_decrement_expression -> primary_expression DECREMENT
Rule 157   post_decrement_expression -> identifier DECREMENT
Rule 158   object_creation_expression -> NEW type LPAREN argument_list RPAREN object_or_collection_initializer
Rule 159   object_creation_expression -> NEW type LPAREN argument_list RPAREN
Rule 160   object_creation_expression -> NEW type LPAREN RPAREN
Rule 161   object_creation_expression -> NEW type object_or_collection_initializer
Rule 162   argument_list -> argument
Rule 163   argument_list -> argument_list COMMA argument
Rule 164   argument -> expression
Rule 165   object_or_collection_initializer -> object_initializer
Rule 166   object_or_collection_initializer -> collection_initializer
Rule 167   object_initializer -> LBRACE member_initializer_list RBRACE
Rule 168   object_initializer -> LBRACE RBRACE
Rule 169   object_initializer -> LBRACE member_initializer_list COMMA RBRACE
Rule 170   member_initializer_list -> member_initializer
Rule 171   member_initializer_list -> member_initializer_list COMMA member_initializer
Rule 172   member_initializer -> identifier EQUALS initializer_value
Rule 173   initializer_value -> expression
Rule 174   initializer_value -> object_or_collection_initializer
Rule 175   collection_initializer -> LBRACE element_initializer_list RBRACE
Rule 176   collection_initializer -> LBRACE element_initializer_list COMMA RBRACE
Rule 177   element_initializer_list -> element_initializer
Rule 178   element_initializer_list -> element_initializer_list COMMA element_initializer
Rule 179   element_initializer -> non_assignment_expression
Rule 180   element_initializer -> LBRACE expression_list RBRACE
Rule 181   array_creation_expression -> NEW non_array_type LBRACKET expression RBRACKET
Rule 182   typeof_expression -> TYPEOF LPAREN type RPAREN
Rule 183   typeof_expression -> TYPEOF LPAREN unbound_type_name RPAREN
Rule 184   typeof_expression -> TYPEOF LPAREN VOID RPAREN
Rule 185   unbound_type_name -> iMEMAi
Rule 186   unbound_type_name -> unbound_type_name MEMBERACCESS identifier
Rule 187   iMEMAi -> identifier MEMBERACCESS identifier
Rule 188   non_assignment_expression -> conditional_expression
Rule 189   conditional_expression -> conditional_or_expression
Rule 190   conditional_or_expression -> conditional_and_expression
Rule 191   conditional_or_expression -> conditional_or_expression CONOR conditional_and_expression
Rule 192   conditional_and_expression -> inclusive_or_expression
Rule 193   conditional_and_expression -> conditional_and_expression CONAND inclusive_or_expression
Rule 194   inclusive_or_expression -> exclusive_or_expression
Rule 195   inclusive_or_expression -> inclusive_or_expression OR exclusive_or_expression
Rule 196   exclusive_or_expression -> and_expression
Rule 197   exclusive_or_expression -> exclusive_or_expression XOR and_expression
Rule 198   and_expression -> equality_expression
Rule 199   and_expression -> and_expression AND equality_expression
Rule 200   equality_expression -> relational_expression
Rule 201   equality_expression -> equality_expression EQ relational_expression
Rule 202   equality_expression -> equality_expression NE relational_expression
Rule 203   relational_expression -> shift_expression
Rule 204   relational_expression -> relational_expression LT shift_expression
Rule 205   relational_expression -> relational_expression GT shift_expression
Rule 206   relational_expression -> relational_expression LEQ shift_expression
Rule 207   relational_expression -> relational_expression GEQ shift_expression
Rule 208   shift_expression -> additive_expression
Rule 209   shift_expression -> shift_expression LSHIFT additive_expression
Rule 210   shift_expression -> shift_expression RSHIFT additive_expression
Rule 211   additive_expression -> multiplicative_expression
Rule 212   additive_expression -> additive_expression PLUS multiplicative_expression
Rule 213   additive_expression -> additive_expression MINUS multiplicative_expression
Rule 214   multiplicative_expression -> unary_expression
Rule 215   multiplicative_expression -> identifier
Rule 216   multiplicative_expression -> multiplicative_expression TIMES unary_expression
Rule 217   multiplicative_expression -> multiplicative_expression DIVIDE unary_expression
Rule 218   multiplicative_expression -> multiplicative_expression MOD unary_expression
Rule 219   multiplicative_expression -> multiplicative_expression TIMES identifier
Rule 220   multiplicative_expression -> multiplicative_expression DIVIDE identifier
Rule 221   multiplicative_expression -> multiplicative_expression MOD identifier

Terminals, with rules where they appear

AND                  : 199
BREAK                : 89
CHAR                 : 149
CHARCONST            : 95
CLASS                : 9 10 11 12
COLON                : 
COMMA                : 38 43 61 98 153 163 169 171 176 178
COMMENTDELIM         : 
COMMENTSLINE         : 
CONAND               : 193
CONOR                : 191
CONTINUE             : 90
DECREMENT            : 156 157
DIVIDE               : 217 220
ELSE                 : 116
EQ                   : 201
EQUALS               : 40 64 100 123 172
GEQ                  : 207
GT                   : 205
IDENTIFIER           : 15
IF                   : 115
INCREMENT            : 154 155
INT                  : 148
INTCONST             : 93
LBRACE               : 13 14 73 74 167 168 169 175 176 180
LBRACKET             : 33 150 151 181
LEQ                  : 206
LNOT                 : 129 130
LPAREN               : 45 46 47 48 49 50 51 52 66 67 70 88 107 108 109 110 111 112 113 114 117 144 158 159 160 182 183 184
LSHIFT               : 209
LT                   : 204
MEMBERACCESS         : 31 32 145 147 186 187
MINUS                : 127 128 213
MINUSEQUAL           : 
MOD                  : 218 221
NE                   : 202
NEW                  : 158 159 160 161 181
NEWLINE              : 
OBJECT               : 29
OR                   : 195
PLUS                 : 125 126 212
PLUSEQUAL            : 
PRINT                : 88
PRIVATE              : 56
PUBLIC               : 55
RBRACE               : 13 14 73 74 167 168 169 175 176 180
RBRACKET             : 33 150 151 181
RETURN               : 91 92
RPAREN               : 45 46 47 48 49 50 51 52 66 67 70 88 107 108 109 110 111 112 113 114 117 144 158 159 160 182 183 184
RSHIFT               : 210
STRCONST             : 94
TERMINATOR           : 6 9 10 22 23 59 69 72 78 81 82 88 89 90 91 92
TILDE                : 70 131 132
TIMES                : 216 219
TYPEOF               : 182 183 184
USING                : 6
VOID                 : 49 50 51 52 184
WHILE                : 118
XOR                  : 197
error                : 

Nonterminals, with rules where they appear

additive_expression  : 208 209 210 212 213
and_expression       : 196 197 199
argument             : 162 163
argument_list        : 107 110 111 158 159 163
array_creation_expression : 134
array_type           : 27
assignment           : 103 120
assignment_operator  : 121 122
block                : 58 68 71 80
break_statement      : 86
class_body           : 9 10 11 12
class_declaration    : 7 8
class_declarations   : 2 3 7
class_member_declaration : 16 17
class_member_declarations : 13 17
class_type           : 26
collection_initializer : 166
compilation_unit     : 1
conditional_and_expression : 190 191 193
conditional_expression : 188
conditional_or_expression : 189 191
constructor_body     : 65
constructor_declaration : 20
constructor_declarator : 65
continue_statement   : 
default_argument     : 62
destructor_body      : 70
destructor_declaration : 21
element_access       : 138
element_initializer  : 177 178
element_initializer_list : 175 176 178
else                 : 114
embedded_statement   : 79 113 114 114 117
equality_expression  : 198 199 201 202
exclusive_or_expression : 194 195 197
expression           : 41 64 88 92 101 113 114 117 121 122 144 152 153 164 173 181
expression_list      : 150 151 153 180
field_declaration    : 18
fixed_parameter      : 60 61
fixed_parameters     : 45 46 49 50 61 66
iMEMAi               : 146 185
identifier           : 6 9 10 11 12 30 31 32 35 39 40 57 62 63 66 67 70 99 100 109 110 122 126 128 130 132 145 147 151 155 157 172 186 187 187 215 219 220 221
if                   : 113 114
if_statement         : 83
inclusive_or_expression : 192 193 195
initializer_value    : 172
invocation_expression : 104 140
iteration_statement  : 84
literal              : 135
local_variable_declaration : 78
local_variable_declarator : 97 98
local_variable_declarators : 96 98
local_variable_initializer : 100
member_access        : 137
member_initializer   : 170 171
member_initializer_list : 167 169 171
member_name          : 45 46 47 48 49 50 51 52
method_body          : 44
method_declaration   : 19
method_header        : 44
modifier             : 53 54
modifiers            : 9 12 22 46 48 50 52 54
multiplicative_expression : 211 212 213 216 217 218 219 220 221
non_array_type       : 33 181
non_assignment_expression : 119 179
object_creation_expression : 102 142
object_initializer   : 165
object_or_collection_initializer : 158 161 174
parenthesized_expression : 136
post_decrement_expression : 106 141
post_increment_expression : 105 139
predefined_type      : 36 147
prefix               : 30 32
primary_expression   : 107 108 124 145 154 156
primary_no_array_creation_expression : 133 150
print_statement      : 85
proper_identifier    : 28 111 112
reference_type       : 24
relational_expression : 200 201 202 204 205 206 207
return_statement     : 87
scope_marker         : 74
shift_expression     : 203 204 205 206 207 209 210
start                : 0
statement            : 76 77
statement_expression : 82
statement_list       : 74 77
type                 : 22 23 34 45 46 47 48 62 63 96 158 159 160 161 182
type_parameter       : 25
typeof_expression    : 143
unary_expression     : 121 125 127 129 131 214 216 217 218
unbound_type_name    : 183 186
using_directive      : 4 5
using_directives     : 3 5
variable_declarator  : 37 38
variable_declarators : 22 23 38
variable_initializer : 40 42 43
variable_initializer_list : 43
while                : 117

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . compilation_unit
    (2) compilation_unit -> . class_declarations
    (3) compilation_unit -> . using_directives class_declarations
    (7) class_declarations -> . class_declarations class_declaration
    (8) class_declarations -> . class_declaration
    (4) using_directives -> . using_directive
    (5) using_directives -> . using_directives using_directive
    (9) class_declaration -> . modifiers CLASS identifier class_body TERMINATOR
    (10) class_declaration -> . CLASS identifier class_body TERMINATOR
    (11) class_declaration -> . CLASS identifier class_body
    (12) class_declaration -> . modifiers CLASS identifier class_body
    (6) using_directive -> . USING identifier TERMINATOR
    (53) modifiers -> . modifier
    (54) modifiers -> . modifiers modifier
    (55) modifier -> . PUBLIC
    (56) modifier -> . PRIVATE

    CLASS           shift and go to state 4
    USING           shift and go to state 1
    PUBLIC          shift and go to state 6
    PRIVATE         shift and go to state 9

    compilation_unit               shift and go to state 7
    class_declarations             shift and go to state 2
    using_directives               shift and go to state 8
    modifier                       shift and go to state 3
    modifiers                      shift and go to state 10
    using_directive                shift and go to state 11
    class_declaration              shift and go to state 5
    start                          shift and go to state 12

state 1

    (6) using_directive -> USING . identifier TERMINATOR
    (15) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 14

    identifier                     shift and go to state 13

state 2

    (2) compilation_unit -> class_declarations .
    (7) class_declarations -> class_declarations . class_declaration
    (9) class_declaration -> . modifiers CLASS identifier class_body TERMINATOR
    (10) class_declaration -> . CLASS identifier class_body TERMINATOR
    (11) class_declaration -> . CLASS identifier class_body
    (12) class_declaration -> . modifiers CLASS identifier class_body
    (53) modifiers -> . modifier
    (54) modifiers -> . modifiers modifier
    (55) modifier -> . PUBLIC
    (56) modifier -> . PRIVATE

    $end            reduce using rule 2 (compilation_unit -> class_declarations .)
    CLASS           shift and go to state 4
    PUBLIC          shift and go to state 6
    PRIVATE         shift and go to state 9

    modifier                       shift and go to state 3
    modifiers                      shift and go to state 10
    class_declaration              shift and go to state 15

state 3

    (53) modifiers -> modifier .

    VOID            reduce using rule 53 (modifiers -> modifier .)
    PUBLIC          reduce using rule 53 (modifiers -> modifier .)
    PRIVATE         reduce using rule 53 (modifiers -> modifier .)
    OBJECT          reduce using rule 53 (modifiers -> modifier .)
    IDENTIFIER      reduce using rule 53 (modifiers -> modifier .)
    INT             reduce using rule 53 (modifiers -> modifier .)
    CHAR            reduce using rule 53 (modifiers -> modifier .)
    CLASS           reduce using rule 53 (modifiers -> modifier .)


state 4

    (10) class_declaration -> CLASS . identifier class_body TERMINATOR
    (11) class_declaration -> CLASS . identifier class_body
    (15) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 14

    identifier                     shift and go to state 16

state 5

    (8) class_declarations -> class_declaration .

    CLASS           reduce using rule 8 (class_declarations -> class_declaration .)
    PUBLIC          reduce using rule 8 (class_declarations -> class_declaration .)
    PRIVATE         reduce using rule 8 (class_declarations -> class_declaration .)
    $end            reduce using rule 8 (class_declarations -> class_declaration .)


state 6

    (55) modifier -> PUBLIC .

    CLASS           reduce using rule 55 (modifier -> PUBLIC .)
    PUBLIC          reduce using rule 55 (modifier -> PUBLIC .)
    PRIVATE         reduce using rule 55 (modifier -> PUBLIC .)
    VOID            reduce using rule 55 (modifier -> PUBLIC .)
    OBJECT          reduce using rule 55 (modifier -> PUBLIC .)
    IDENTIFIER      reduce using rule 55 (modifier -> PUBLIC .)
    INT             reduce using rule 55 (modifier -> PUBLIC .)
    CHAR            reduce using rule 55 (modifier -> PUBLIC .)


state 7

    (1) start -> compilation_unit .

    $end            reduce using rule 1 (start -> compilation_unit .)


state 8

    (3) compilation_unit -> using_directives . class_declarations
    (5) using_directives -> using_directives . using_directive
    (7) class_declarations -> . class_declarations class_declaration
    (8) class_declarations -> . class_declaration
    (6) using_directive -> . USING identifier TERMINATOR
    (9) class_declaration -> . modifiers CLASS identifier class_body TERMINATOR
    (10) class_declaration -> . CLASS identifier class_body TERMINATOR
    (11) class_declaration -> . CLASS identifier class_body
    (12) class_declaration -> . modifiers CLASS identifier class_body
    (53) modifiers -> . modifier
    (54) modifiers -> . modifiers modifier
    (55) modifier -> . PUBLIC
    (56) modifier -> . PRIVATE

    USING           shift and go to state 1
    CLASS           shift and go to state 4
    PUBLIC          shift and go to state 6
    PRIVATE         shift and go to state 9

    class_declarations             shift and go to state 17
    modifier                       shift and go to state 3
    modifiers                      shift and go to state 10
    using_directive                shift and go to state 18
    class_declaration              shift and go to state 5

state 9

    (56) modifier -> PRIVATE .

    CLASS           reduce using rule 56 (modifier -> PRIVATE .)
    PUBLIC          reduce using rule 56 (modifier -> PRIVATE .)
    PRIVATE         reduce using rule 56 (modifier -> PRIVATE .)
    VOID            reduce using rule 56 (modifier -> PRIVATE .)
    OBJECT          reduce using rule 56 (modifier -> PRIVATE .)
    IDENTIFIER      reduce using rule 56 (modifier -> PRIVATE .)
    INT             reduce using rule 56 (modifier -> PRIVATE .)
    CHAR            reduce using rule 56 (modifier -> PRIVATE .)


state 10

    (9) class_declaration -> modifiers . CLASS identifier class_body TERMINATOR
    (12) class_declaration -> modifiers . CLASS identifier class_body
    (54) modifiers -> modifiers . modifier
    (55) modifier -> . PUBLIC
    (56) modifier -> . PRIVATE

    CLASS           shift and go to state 19
    PUBLIC          shift and go to state 6
    PRIVATE         shift and go to state 9

    modifier                       shift and go to state 20

state 11

    (4) using_directives -> using_directive .

    USING           reduce using rule 4 (using_directives -> using_directive .)
    CLASS           reduce using rule 4 (using_directives -> using_directive .)
    PUBLIC          reduce using rule 4 (using_directives -> using_directive .)
    PRIVATE         reduce using rule 4 (using_directives -> using_directive .)


state 12

    (0) S' -> start .



state 13

    (6) using_directive -> USING identifier . TERMINATOR

    TERMINATOR      shift and go to state 21


state 14

    (15) identifier -> IDENTIFIER .

    MEMBERACCESS    reduce using rule 15 (identifier -> IDENTIFIER .)
    RPAREN          reduce using rule 15 (identifier -> IDENTIFIER .)
    LBRACKET        reduce using rule 15 (identifier -> IDENTIFIER .)
    INCREMENT       reduce using rule 15 (identifier -> IDENTIFIER .)
    LPAREN          reduce using rule 15 (identifier -> IDENTIFIER .)
    DECREMENT       reduce using rule 15 (identifier -> IDENTIFIER .)
    TIMES           reduce using rule 15 (identifier -> IDENTIFIER .)
    DIVIDE          reduce using rule 15 (identifier -> IDENTIFIER .)
    MOD             reduce using rule 15 (identifier -> IDENTIFIER .)
    PLUS            reduce using rule 15 (identifier -> IDENTIFIER .)
    MINUS           reduce using rule 15 (identifier -> IDENTIFIER .)
    LSHIFT          reduce using rule 15 (identifier -> IDENTIFIER .)
    RSHIFT          reduce using rule 15 (identifier -> IDENTIFIER .)
    LT              reduce using rule 15 (identifier -> IDENTIFIER .)
    GT              reduce using rule 15 (identifier -> IDENTIFIER .)
    LEQ             reduce using rule 15 (identifier -> IDENTIFIER .)
    GEQ             reduce using rule 15 (identifier -> IDENTIFIER .)
    EQ              reduce using rule 15 (identifier -> IDENTIFIER .)
    NE              reduce using rule 15 (identifier -> IDENTIFIER .)
    AND             reduce using rule 15 (identifier -> IDENTIFIER .)
    XOR             reduce using rule 15 (identifier -> IDENTIFIER .)
    OR              reduce using rule 15 (identifier -> IDENTIFIER .)
    CONAND          reduce using rule 15 (identifier -> IDENTIFIER .)
    CONOR           reduce using rule 15 (identifier -> IDENTIFIER .)
    RBRACE          reduce using rule 15 (identifier -> IDENTIFIER .)
    COMMA           reduce using rule 15 (identifier -> IDENTIFIER .)
    TERMINATOR      reduce using rule 15 (identifier -> IDENTIFIER .)
    RBRACKET        reduce using rule 15 (identifier -> IDENTIFIER .)
    EQUALS          reduce using rule 15 (identifier -> IDENTIFIER .)
    LBRACE          reduce using rule 15 (identifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 15 (identifier -> IDENTIFIER .)


state 15

    (7) class_declarations -> class_declarations class_declaration .

    CLASS           reduce using rule 7 (class_declarations -> class_declarations class_declaration .)
    PUBLIC          reduce using rule 7 (class_declarations -> class_declarations class_declaration .)
    PRIVATE         reduce using rule 7 (class_declarations -> class_declarations class_declaration .)
    $end            reduce using rule 7 (class_declarations -> class_declarations class_declaration .)


state 16

    (10) class_declaration -> CLASS identifier . class_body TERMINATOR
    (11) class_declaration -> CLASS identifier . class_body
    (13) class_body -> . LBRACE class_member_declarations RBRACE
    (14) class_body -> . LBRACE RBRACE

    LBRACE          shift and go to state 23

    class_body                     shift and go to state 22

state 17

    (3) compilation_unit -> using_directives class_declarations .
    (7) class_declarations -> class_declarations . class_declaration
    (9) class_declaration -> . modifiers CLASS identifier class_body TERMINATOR
    (10) class_declaration -> . CLASS identifier class_body TERMINATOR
    (11) class_declaration -> . CLASS identifier class_body
    (12) class_declaration -> . modifiers CLASS identifier class_body
    (53) modifiers -> . modifier
    (54) modifiers -> . modifiers modifier
    (55) modifier -> . PUBLIC
    (56) modifier -> . PRIVATE

    $end            reduce using rule 3 (compilation_unit -> using_directives class_declarations .)
    CLASS           shift and go to state 4
    PUBLIC          shift and go to state 6
    PRIVATE         shift and go to state 9

    modifier                       shift and go to state 3
    modifiers                      shift and go to state 10
    class_declaration              shift and go to state 15

state 18

    (5) using_directives -> using_directives using_directive .

    USING           reduce using rule 5 (using_directives -> using_directives using_directive .)
    CLASS           reduce using rule 5 (using_directives -> using_directives using_directive .)
    PUBLIC          reduce using rule 5 (using_directives -> using_directives using_directive .)
    PRIVATE         reduce using rule 5 (using_directives -> using_directives using_directive .)


state 19

    (9) class_declaration -> modifiers CLASS . identifier class_body TERMINATOR
    (12) class_declaration -> modifiers CLASS . identifier class_body
    (15) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 14

    identifier                     shift and go to state 24

state 20

    (54) modifiers -> modifiers modifier .

    VOID            reduce using rule 54 (modifiers -> modifiers modifier .)
    PUBLIC          reduce using rule 54 (modifiers -> modifiers modifier .)
    PRIVATE         reduce using rule 54 (modifiers -> modifiers modifier .)
    OBJECT          reduce using rule 54 (modifiers -> modifiers modifier .)
    IDENTIFIER      reduce using rule 54 (modifiers -> modifiers modifier .)
    INT             reduce using rule 54 (modifiers -> modifiers modifier .)
    CHAR            reduce using rule 54 (modifiers -> modifiers modifier .)
    CLASS           reduce using rule 54 (modifiers -> modifiers modifier .)


state 21

    (6) using_directive -> USING identifier TERMINATOR .

    USING           reduce using rule 6 (using_directive -> USING identifier TERMINATOR .)
    CLASS           reduce using rule 6 (using_directive -> USING identifier TERMINATOR .)
    PUBLIC          reduce using rule 6 (using_directive -> USING identifier TERMINATOR .)
    PRIVATE         reduce using rule 6 (using_directive -> USING identifier TERMINATOR .)


state 22

    (10) class_declaration -> CLASS identifier class_body . TERMINATOR
    (11) class_declaration -> CLASS identifier class_body .

    TERMINATOR      shift and go to state 25
    CLASS           reduce using rule 11 (class_declaration -> CLASS identifier class_body .)
    PUBLIC          reduce using rule 11 (class_declaration -> CLASS identifier class_body .)
    PRIVATE         reduce using rule 11 (class_declaration -> CLASS identifier class_body .)
    $end            reduce using rule 11 (class_declaration -> CLASS identifier class_body .)


state 23

    (13) class_body -> LBRACE . class_member_declarations RBRACE
    (14) class_body -> LBRACE . RBRACE
    (16) class_member_declarations -> . class_member_declaration
    (17) class_member_declarations -> . class_member_declarations class_member_declaration
    (18) class_member_declaration -> . field_declaration
    (19) class_member_declaration -> . method_declaration
    (20) class_member_declaration -> . constructor_declaration
    (21) class_member_declaration -> . destructor_declaration
    (22) field_declaration -> . modifiers type variable_declarators TERMINATOR
    (23) field_declaration -> . type variable_declarators TERMINATOR
    (44) method_declaration -> . method_header method_body
    (65) constructor_declaration -> . constructor_declarator constructor_body
    (70) destructor_declaration -> . TILDE identifier LPAREN RPAREN destructor_body
    (53) modifiers -> . modifier
    (54) modifiers -> . modifiers modifier
    (24) type -> . reference_type
    (25) type -> . type_parameter
    (45) method_header -> . type member_name LPAREN fixed_parameters RPAREN
    (46) method_header -> . modifiers type member_name LPAREN fixed_parameters RPAREN
    (47) method_header -> . type member_name LPAREN RPAREN
    (48) method_header -> . modifiers type member_name LPAREN RPAREN
    (49) method_header -> . VOID member_name LPAREN fixed_parameters RPAREN
    (50) method_header -> . modifiers VOID member_name LPAREN fixed_parameters RPAREN
    (51) method_header -> . VOID member_name LPAREN RPAREN
    (52) method_header -> . modifiers VOID member_name LPAREN RPAREN
    (66) constructor_declarator -> . identifier LPAREN fixed_parameters RPAREN
    (67) constructor_declarator -> . identifier LPAREN RPAREN
    (55) modifier -> . PUBLIC
    (56) modifier -> . PRIVATE
    (26) reference_type -> . class_type
    (27) reference_type -> . array_type
    (35) type_parameter -> . identifier
    (36) type_parameter -> . predefined_type
    (15) identifier -> . IDENTIFIER
    (28) class_type -> . proper_identifier
    (29) class_type -> . OBJECT
    (33) array_type -> . non_array_type LBRACKET RBRACKET
    (148) predefined_type -> . INT
    (149) predefined_type -> . CHAR
    (30) proper_identifier -> . prefix identifier
    (34) non_array_type -> . type
    (31) prefix -> . identifier MEMBERACCESS
    (32) prefix -> . prefix identifier MEMBERACCESS

    RBRACE          shift and go to state 38
    TILDE           shift and go to state 40
    VOID            shift and go to state 26
    PUBLIC          shift and go to state 6
    PRIVATE         shift and go to state 9
    IDENTIFIER      shift and go to state 14
    OBJECT          shift and go to state 50
    INT             shift and go to state 39
    CHAR            shift and go to state 36
